# ootr-multiworld

./: .gitignore  Cargo.toml  LICENSE  README.md  ootr-multiworld.sln
.cargo/: deny.toml
.sqlx/: query-0323a630b5c9d58e6e612b740dc056d9c60b5ad347b1478ae382cf805b32de85.json  query-0c2c1bd6208c100a600ba50f8e6d8a20b3f957baa0390cbd811a5e3af2041264.json  query-0f425055fea25f0cb527dc573ffb3fac3189ffe0bc595b7f48737b0d7f086016.json  query-1f4a44ecd562d5846cf5e2f5b71f1b8d4d46d91f091421bcb4497daa46f802fc.json  query-28c93b1fbe1eaa11339b1496dcbbe61af058997ee8806491cc9479db2e8856b6.json  query-3024bd2bb3cc09215fc74f6cc5125caf5408bb4cc5b06c61e92ddda2b782a3b0.json  query-47e7a8d84e77a1d1aafc5440a4011b3609a93b48d3287d9985793880067ef2e5.json  query-7c45d581e2cc1e56ecf1ec7ce58e926091ad20f5bbe9949c23aab68c55483f89.json  query-88798da98cf7b89e23d08dcd3d4f51d663563b5a2b6a5c3e24aabad0cad3cd56.json  query-9156ff1d5eafa340ae54797e4a5050217328b2de35f780a97f94f10e44987327.json  query-94cb471b28a95c83e724448e0311deac8eaf218e45c401c3f2feda19cc90e2f9.json  query-a11178ed4eae1ce11fa05b3887eacee9db4af58f001b607d4716e3988a8bbe78.json  query-c8c43201a24c1f3a4d6ec6118da87c0fb3a67f4852833379d6ca55c31a611068.json  query-d44b3f8b55476c9c24ffc8ea5cec66c0dc72093575ef8b21b241e5865e122808.json  query-e1c1f75755f230c96fc9c5c962f6097042195fbccbb5ec43580cfd81a866bc85.json  query-f46a4ce633372920ae840e24c78a9b7ea4fabeda8e4e320a6cde6988ed521ab8.json
assets/: bizhawk-readme-linux.txt  bizhawk-readme-windows.txt  bootstrap-linux.sh  bootstrap-macos.sh  bootstrap.ps1  build-installer.ps1  check-ffi.py  mw.midos.house.nginx  mwdev.midos.house.nginx  ootrmw-dev.service  ootrmw-pj64.js  ootrmw.service  password-prompt.sh  pre-commit.ps1  release.ps1  test-bizhawk.ps1  test-server.ps1
assets/doc/: crash.md  logging-linux.md  logging.md  manual-install.md  server-client-protocol.md
assets/macos/Mido's House Multiworld.app/Contents/: Info.plist
assets/macos/Mido's House Multiworld.app/Contents/Resources/: AppIcon.icns  Assets.car
assets/test/: bizhawk.ps1  bizhawk.sh  linux.ps1  pj64v3.ps1  pj64v4.ps1  server.ps1
crate/multiworld/: Cargo.toml
crate/multiworld-admin-cli/: Cargo.toml
crate/multiworld-admin-cli/src/: main.rs  parse.rs
crate/multiworld-bizhawk/: Cargo.toml  build.rs
crate/multiworld-bizhawk/OotrMultiworld/src/: MainForm.cs  OotrMultiworld.csproj
crate/multiworld-bizhawk/src/: lib.rs
crate/multiworld-csharp/: Cargo.toml
crate/multiworld-csharp/src/: lib.rs  util.rs
crate/multiworld-derive/: Cargo.toml
crate/multiworld-derive/src/: lib.rs
crate/multiworld-gui/: Cargo.toml  build.rs
crate/multiworld-gui/src/: everdrive.rs  flashcart.rs  lib.rs  login.rs  main.rs  persistent_state.rs  retroarch.rs  subscriptions.rs
crate/multiworld-installer/: Cargo.toml  build.rs
crate/multiworld-installer/src/: github.rs  main.rs
crate/multiworld-pj64-gui/: Cargo.toml
crate/multiworld-pj64-gui/src/: main.rs  subscriptions.rs
crate/multiworld-post-release-macos/: Cargo.toml
crate/multiworld-post-release-macos/src/: main.rs
crate/multiworld-release/: Cargo.toml
crate/multiworld-release-macos/: Cargo.toml
crate/multiworld-release-macos/src/: main.rs
crate/multiworld-release/src/: cli.rs  main.rs  version.rs
crate/multiworld-updater/: Cargo.toml  build.rs
crate/multiworld-updater/src/: main.rs  util.rs
crate/multiworld-utils/: Cargo.toml
crate/multiworld-utils/src/: release.rs  version.rs
crate/multiworld/src/: config.rs  frontend.rs  github.rs  lib.rs  localisation.rs  localization.rs  rando.rs  style.rs  util.rs
crate/multiworld/src/ws/: mod.rs  unversioned.rs  v10.rs  v11.rs  v12.rs  v13.rs  v14.rs  v15.rs  v16.rs  v17.rs
crate/ootrmwd/: Cargo.toml  build.rs
crate/ootrmwd/src/: http.rs  main.rs  unix_socket.rs
crate/retroarch-test/: Cargo.toml
crate/retroarch-test/src/: main.rs
