[workspace]
members = ["crate/*"]
default-members = ["crate/ootrmwd"]
resolver = "2"

[workspace.package]
version = "16.0.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[workspace.lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
lto = true
strip = true
