[workspace]
members = ["crate/*"]
default-members = ["crate/ootrmwd"]
resolver = "2"

[workspace.package]
version = "17.0.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"
repository = "https://github.com/midoshouse/ootr-multiworld"

[workspace.lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true
