[package]
name = "multiworld-admin-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-proto = "0.23"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
itertools = "0.13"
multiworld = { path = "../multiworld" }
ootr-utils = { git = "https://github.com/midoshouse/rust-ootr-utils", branch = "main" }
serde_json = "1"
syn = { version = "2", features = ["full"] }
thiserror = "1"
tokio = { version = "1", features = ["parking_lot", "time"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] } # waiting for https://github.com/rwf2/Rocket/pull/2823
url = "2"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
