[package]
name = "multiworld-admin-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-proto = { version = "0.24", features = ["tokio-tungstenite024"] }
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
itertools = "0.14"
multiworld = { path = "../multiworld" }
ootr-utils = { git = "https://github.com/midoshouse/rust-ootr-utils", branch = "main" }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
syn = { version = "2", features = ["full"] }
thiserror = "2"
tokio = { version = "1", features = ["parking_lot", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots", "url"] }
url = "2"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
