[package]
name = "multiworld-bizhawk"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[build-dependencies]
lazy-regex = "3"
thiserror = "1"

[build-dependencies.tokio]
version = "1"
features = ["parking_lot", "process"]

[build-dependencies.wheel]
git = "https://github.com/fenhl/wheel"
#branch = "main"
branch = "async-proto-error-ctx" #TODO go back to main once error-ctx branch of async-proto is published

[dependencies]
semver = "1"

[target.'cfg(windows)'.dependencies.winver]
git = "https://github.com/fenhl/winver"
branch = "main"
