[package]
name = "multiworld-bizhawk"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[build-dependencies]
lazy-regex = "3"
thiserror = "1"
tokio = { version = "1", features = ["parking_lot", "process"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }

[dependencies]
semver = "1"

[target.'cfg(windows)'.dependencies]
winver = { git = "https://github.com/fenhl/winver", branch = "main" }
