[package]
name = "multiworld-bizhawk"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
require-user-agent-salt = []

[build-dependencies]
lazy-regex = "3"
thiserror = "2"
tokio = { version = "1", features = ["parking_lot", "process"] }
wheel = { git = "https://github.com/fenhl/wheel" }

[dependencies]
semver = "1"

[target.'cfg(windows)'.dependencies]
winver = { git = "https://github.com/fenhl/winver" }
