[package]
name = "multiworld-csharp"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "multiworld"
crate-type = ["cdylib"]

[lints.rust]
rust_2018_idioms = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
async-proto = "0.16.10"
itertools = "0.12"
libc = "0.2"
once_cell = "1"
thiserror = "1"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.multiworld]
path = "../multiworld"

[dependencies.multiworld-derive]
path = "../multiworld-derive"

[dependencies.ootr-utils]
git = "https://github.com/midoshouse/rust-ootr-utils"
branch = "main"

[dependencies.oottracker]
git = "https://github.com/fenhl/oottracker"
branch = "mw"

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"

[target.'cfg(unix)'.dependencies]
xdg = "2"

[target.'cfg(windows)'.dependencies]
directories = "5"
semver = "1"

[target.'cfg(windows)'.dependencies.winver]
git = "https://github.com/fenhl/winver"
branch = "main"
