[package]
name = "multiworld-csharp"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "multiworld"
crate-type = ["cdylib"]

[lints.rust]
rust_2018_idioms = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
async-proto = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
itertools = "0.13"
libc = "0.2"
multiworld = { path = "../multiworld" }
multiworld-derive = { path = "../multiworld-derive" }
once_cell = "1"
ootr-utils = { git = "https://github.com/midoshouse/rust-ootr-utils", branch = "main" }
oottracker = { git = "https://github.com/fenhl/oottracker", branch = "mw" }
thiserror = "1"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }

[target.'cfg(unix)'.dependencies]
xdg = "2"

[target.'cfg(windows)'.dependencies]
directories = "5"
semver = "1"
windows = { version = "0.58", features = ["Win32_Storage_FileSystem"] }
winver = { git = "https://github.com/fenhl/winver", branch = "main" }
