[package]
name = "multiworld-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
itertools = "0.12"
lazy-regex = "3"
proc-macro2 = "1"
quote = "1"
semver = "1"

[dependencies.syn]
version = "2"
features = ["extra-traits", "full"]
