[package]
name = "multiworld-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
itertools = "0.13"
lazy-regex = "3"
proc-macro2 = "1"
quote = "1"
semver = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
