[package]
name = "multiworld-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints.rust]
rust_2018_idioms = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[build-dependencies]
winres = "0.1"

[dependencies]
async-proto = "0.19"
dark-light = "1"
enum-iterator = "2"
futures = "0.3"
iced_runtime = "0.12"
if_chain = "1"
itertools = "0.12"
oauth2 = "4"
once_cell = "1"
open = "5"
rand = "0.8"
rfd = "0.14"
semver = "1"
serde_json = "1"
sysinfo = "0.30"
thiserror = "1"
tokio-stream = "0.1"
url = "2"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.iced]
version = "0.12"
default-features = false
features = ["advanced", "image", "svg", "tokio"]

[dependencies.image]
version = "0.24" # recursive dependency of iced
default-features = false
features = ["ico"]

[dependencies.log-lock]
git = "https://github.com/fenhl/log-lock"
branch = "main"

[dependencies.multiworld]
path = "../multiworld"

[dependencies.ootr]
git = "https://github.com/fenhl/oottracker"
branch = "mw"

[dependencies.ootr-utils]
git = "https://github.com/midoshouse/rust-ootr-utils"
branch = "main"

[dependencies.oottracker]
git = "https://github.com/fenhl/oottracker"
branch = "mw"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "stream"]

[dependencies.rocket]
version = "0.5"
default-features = false

[dependencies.rocket-util]
git = "https://github.com/fenhl/rocket-util"
branch = "main"

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["utils"]

[dependencies.tokio]
version = "1"
features = ["fs", "io-util", "net", "parking_lot", "sync", "time"]

[dependencies.tokio-tungstenite]
version = "0.20"
features = ["rustls-tls-webpki-roots"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
features = ["reqwest", "tungstenite"]

[target.'cfg(unix)'.dependencies]
xdg = "2"

[target.'cfg(windows)'.dependencies]
directories = "5"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.19"
