[package]
name = "multiworld-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints.rust]
rust_2018_idioms = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[build-dependencies]
winres = "0.1"

[dependencies]
arrayref = "0.3.7"
async-proto = "0.21"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
dark-light = "1"
enum-iterator = "2"
futures = "0.3"
iced = { version = "0.12", default-features = false, features = ["advanced", "image", "svg", "tokio"] }
iced_runtime = "0.12"
if_chain = "1"
image = { version = "0.24", default-features = false, features = ["ico"] } # recursive dependency of iced
itertools = "0.12"
log-lock = { git = "https://github.com/fenhl/log-lock", branch = "main" }
multiworld = { path = "../multiworld" }
oauth2 = "4"
once_cell = "1"
ootr = { git = "https://github.com/fenhl/oottracker", branch = "mw" }
ootr-utils = { git = "https://github.com/midoshouse/rust-ootr-utils", branch = "main" }
oottracker = { git = "https://github.com/fenhl/oottracker", branch = "mw" }
open = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls", "stream"] }
rfd = "0.14"
rocket = { version = "0.5", default-features = false }
rocket-util = { git = "https://github.com/fenhl/rocket-util", branch = "main" }
semver = "1"
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = ["utils"] }
sysinfo = "0.30"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "net", "parking_lot", "sync", "time"] }
tokio-serial = "5.4.4"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
url = "2"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["reqwest", "tungstenite"] }

[target.'cfg(unix)'.dependencies]
xdg = "2"

[target.'cfg(windows)'.dependencies]
directories = "5"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.19"
