[package]
name = "multiworld-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lints.rust]
rust_2018_idioms = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[features]
require-user-agent-salt = ["multiworld/require-user-agent-salt"]

[build-dependencies]
winresource = "0.1"

[dependencies]
arrayref = "0.3.7"
async-proto = "0.25"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
enum-iterator = "2"
futures = "0.3"
iced = { version = "0.13", default-features = false, features = ["advanced", "image", "svg", "tiny-skia", "tokio"] }
if_chain = "1"
image = { version = "0.24", default-features = false, features = ["ico"] } # transitive dependency of iced
itertools = "0.14"
log-lock = { git = "https://github.com/fenhl/log-lock", branch = "main" }
multiworld = { path = "../multiworld" }
oauth2 = "4"
once_cell = "1"
ootr = { git = "https://github.com/fenhl/oottracker", branch = "mw" }
ootr-utils = { git = "https://github.com/midoshouse/rust-ootr-utils", branch = "main" }
oottracker = { git = "https://github.com/fenhl/oottracker", branch = "mw" }
open = "5"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls", "stream"] }
rfd = "0.15"
rocket = { version = "0.5", default-features = false }
rocket-util = { git = "https://github.com/fenhl/rocket-util", branch = "main" }
semver = "1"
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
serenity = { version = "0.12", default-features = false, features = ["utils"] }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "net", "parking_lot", "sync", "time"] }
tokio-io-timeout = "1.2.0"
tokio-serial = "5.4.4"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["gui", "reqwest", "tungstenite024"] }

[target.'cfg(unix)'.dependencies]
xdg = "2"

[target.'cfg(windows)'.dependencies]
directories = "6"
