[package]
name = "multiworld-installer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[build-dependencies]
thiserror = "1"
winres = "0.1"

[build-dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
features = ["reqwest"]

[target.'cfg(windows)'.build-dependencies.multiworld-bizhawk]
path = "../multiworld-bizhawk"

[target.'cfg(unix)'.build-dependencies]
itertools = "0.13"

[target.'cfg(unix)'.build-dependencies.multiworld]
path = "../multiworld"

[target.'cfg(unix)'.build-dependencies.reqwest]
version = "0.12"
default-features = false
features = ["charset", "http2", "macos-system-configuration", "rustls-tls"]

[dependencies]
async_zip = { version = "0.0.17", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dark-light = "1"
directories = "5"
enum-iterator = "2"
futures = "0.3"
iced = { version = "0.12", default-features = false, features = ["image", "tokio"] }
iced_runtime = "0.12"
image = { version = "0.24", default-features = false, features = ["ico"] } # transitive dependency of iced
itertools = "0.13"
lazy-regex = "3"
multiworld = { path = "../multiworld" }
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls", "stream"] }
rfd = "0.14"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_ini = "0.2"
serenity = { version = "0.12", default-features = false, features = ["utils"] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "parking_lot", "process", "rt-multi-thread"] }
url = { version = "2", features = ["serde"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }

[target.'cfg(target_os = "linux")'.dependencies]
async-compression = { version = "0.4", features = ["gzip", "tokio"] }
gio = "0.19"
tokio-tar = "0.3"
which = "6"
xdg = "2"

[target.'cfg(target_os = "windows")'.dependencies]
is_elevated = "0.1"
kuchiki = "0.8"
mslnk = "0.1"
runas = "1.2"
tempfile = "3"
tokio-util = { version = "0.7", features = ["io"] }
winver = { git = "https://github.com/fenhl/winver", branch = "main" }
