[package]
name = "multiworld-installer"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
require-user-agent-salt = ["multiworld/require-user-agent-salt"]

[build-dependencies]
thiserror = "2"
wheel = { git = "https://github.com/fenhl/wheel", features = ["reqwest"] }
winresource = "0.1"

[target.'cfg(windows)'.build-dependencies]
multiworld-bizhawk = { path = "../multiworld-bizhawk" }

[target.'cfg(unix)'.build-dependencies]
itertools = "0.14"
multiworld = { path = "../multiworld" }
reqwest = { version = "0.13", default-features = false, features = ["charset", "gzip", "hickory-dns", "http2", "rustls-no-provider", "system-proxy", "zstd"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dependencies]
async_zip = { version = "0.0.18", features = ["full"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
enum-iterator = "2"
futures = "0.3"
iced = { version = "0.14", default-features = false, features = ["image", "tiny-skia", "tokio"] }
if_chain = "1.0.2"
image = { version = "0.25", default-features = false, features = ["ico"] }
itertools = "0.14"
lazy-regex = "3"
multiworld = { path = "../multiworld" }
open = "5"
reqwest = { version = "0.13", default-features = false, features = ["charset", "gzip", "http2", "json", "rustls-no-provider", "stream", "system-proxy", "zstd"] }
rfd = "0.15"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_ini = "0.2"
serenity = { version = "0.12", default-features = false, features = ["utils"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "parking_lot", "process", "rt-multi-thread"] }
url = { version = "2", features = ["serde"] }
wheel = { git = "https://github.com/fenhl/wheel", features = ["gui"] }

[target.'cfg(target_os = "linux")'.dependencies]
async-compression = { version = "0.4", features = ["gzip", "tokio"] }
astral-tokio-tar = "0.5.6"
which = "8"
xdg = "3"

[target.'cfg(target_os = "windows")'.dependencies]
is_elevated = "0.1"
kuchiki = "0.8"
mslnk = "0.1"
runas = "1.2"
tempfile = "3"
tokio-util = { version = "0.7", features = ["io"] }
winver = { git = "https://github.com/fenhl/winver" }
