[package]
name = "multiworld-pj64-gui"
version = "1.0.2"
edition = "2021"

[dependencies]
async-proto = "0.15"
directories = "4"
futures = "0.3"
iced_futures = "0.4"
iced_native = "0.5"
itertools = "0.10"
semver = "1"
thiserror = "1"

[dependencies.iced]
version = "0.4"
features = ["default_system_font", "pure", "tokio"]

[dependencies.multiworld]
path = "../multiworld"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "stream", "trust-dns"]

[dependencies.tokio]
version = "1"
features = ["fs", "net", "sync"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
