[package]
name = "multiworld-pj64-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[build-dependencies]
winres = "0.1"

[dependencies]
iced = "0.8"
thiserror = "1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["ico"]

[dependencies.multiworld-gui]
path = "../multiworld-gui"

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
