[package]
name = "multiworld-post-release-macos"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
itertools = "0.13.0"
lazy-regex = "3.3.0"
semver = "1.0.23"
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["io-util", "process"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
