[package]
name = "multiworld-release-macos"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-proto = "0.26"
clap = { version = "4.5.21", features = ["derive"] }
dir-lock = "0.5"
directories = "6"
git2 = "0.20"
multiworld = { path = "../multiworld", features = ["require-user-agent-salt"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["io-std", "parking_lot", "process"] }
wheel = { git = "https://github.com/fenhl/wheel" }
