[package]
name = "multiworld-release-macos"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
apple-bundle = "0.1"
async-proto = "0.26"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.21", features = ["derive"] }
dir-lock = "0.5"
directories = "6"
multiworld = { path = "../multiworld", features = ["require-user-agent-salt"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["io-std", "parking_lot", "process"] }
toml = { version = "0.9.10", default-features = false, features = ["parse"] }
wheel = { git = "https://github.com/fenhl/wheel" }
