[package]
name = "multiworld-release"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-proto = "0.21"
async-trait = "0.1"
async_zip = { version = "0.0.17", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
dir-lock = { git = "https://github.com/fenhl/rust-dir-lock", branch = "main" }
futures = "0.3"
github-app-auth = { git = "https://github.com/fenhl/github-app-auth", branch = "deps" }
graphql_client = "0.14"
gres = { git = "https://github.com/fenhl/gres", branch = "main" }
itertools = "0.13"
lazy-regex = "3"
log-lock = { git = "https://github.com/fenhl/log-lock", branch = "main" }
multiworld = { path = "../multiworld", features = ["github-app-auth"] }
multiworld-bizhawk = { path = "../multiworld-bizhawk" }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "parking_lot", "process", "sync"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
