[package]
name = "multiworld-updater"
version.workspace = true
authors.workspace = true
edition.workspace = true

[build-dependencies]
winres = "0.1"

[dependencies]
bytes = "1"
dark-light = "1"
directories = "5"
futures = "0.3"
iced_native = "0.10"
itertools = "0.10"
open = "4"
runas = "1"
semver = "1"
sysinfo = "0.28"
tempfile = "3"
thiserror = "1"
url = "2"

[dependencies.async_zip]
version = "0.0.13"
features = ["full"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.iced]
version = "0.9"
features = ["default_system_font", "glow", "image", "tokio"]

[dependencies.image]
version = "0.24"
default-features = false
features = ["ico"]

[dependencies.multiworld]
path = "../multiworld"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["utils"]

[dependencies.tokio]
version = "1"
features = ["fs", "time"]

[dependencies.tokio-util]
version = "0.7"
features = ["io"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = ["Win32_Storage_FileSystem"]
