[package]
name = "multiworld-updater"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints.rust]
rust_2018_idioms = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[build-dependencies]
winres = "0.1"

[dependencies]
bytes = "1"
dark-light = "1"
futures = "0.3"
iced_runtime = "0.12"
itertools = "0.12"
open = "5"
runas = "=1.0.0" # https://github.com/mitsuhiko/rust-runas/issues/13
semver = "1"
sysinfo = "0.30"
tempfile = "3"
thiserror = "1"
url = "2"

[dependencies.async_zip]
version = "0.0.16"
features = ["full"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.iced]
version = "0.12"
default-features = false
features = ["image", "tokio"]

[dependencies.image]
version = "0.24"
default-features = false
features = ["ico"]

[dependencies.multiworld]
path = "../multiworld"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["utils"]

[dependencies.tokio]
version = "1"
features = ["fs", "parking_lot", "time"]

[dependencies.tokio-util]
version = "0.7"
features = ["io"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
features = ["reqwest"]

[target.'cfg(unix)'.dependencies]
xdg = "2"

[target.'cfg(windows)'.dependencies]
directories = "5"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = ["Win32_Storage_FileSystem"]

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.19"
tokio-tar = "0.3"

[target.'cfg(target_os = "linux")'.dependencies.async-compression]
version = "0.4"
features = ["gzip", "tokio"]
