[package]
name = "multiworld-updater"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints.rust]
rust_2018_idioms = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[build-dependencies]
winres = "0.1"

[dependencies]
async_zip = { version = "0.0.17", features = ["full"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
dark-light = "1"
futures = "0.3"
iced = { version = "0.13", default-features = false, features = ["image", "tiny-skia", "tokio"] }
image = { version = "0.24", default-features = false, features = ["ico"] } # recursive dependency of iced
itertools = "0.13"
multiworld = { path = "../multiworld" }
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls", "stream"] }
runas = "1.2"
semver = "1"
serenity = { version = "0.12", default-features = false, features = ["utils"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "parking_lot", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["reqwest"] }

[target.'cfg(unix)'.dependencies]
xdg = "2"

[target.'cfg(windows)'.dependencies]
directories = "5"
windows = { version = "0.58", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "linux")'.dependencies]
async-compression = { version = "0.4", features = ["gzip", "tokio"] }
gio = "0.20"
tokio-tar = "0.3"
