[package]
name = "multiworld"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
pyo3 = ["dep:pyo3", "ootr-utils/pyo3"]

[dependencies]
async-recursion = "1"
async-trait = "0.1"
bitflags = "2"
derivative = "2"
either = "1"
futures = "0.3"
if_chain = "1"
itertools = "0.11"
ring = "0.16"
semver = "1"
serde_json = "1"
thiserror = "1"

[dependencies.async-proto]
version = "0.16.10"
features = ["semver"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.log-lock]
git = "https://github.com/fenhl/log-lock"
branch = "main"

[dependencies.multiworld-derive]
path = "../multiworld-derive"

[dependencies.ootr-utils]
git = "https://github.com/midoshouse/rust-ootr-utils"
branch = "main"

[dependencies.oottracker]
git = "https://github.com/fenhl/oottracker"
branch = "mw"

[dependencies.pyo3]
version = "0.19"
features = ["auto-initialize"]
optional = true

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "json"]

[dependencies.rocket_ws]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "postgres"]
optional = true

[dependencies.tokio]
version = "1"
features = ["net", "parking_lot", "process", "sync", "time"]

[dependencies.tokio-tungstenite]
version = "0.20"
features = ["rustls-tls-webpki-roots"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
features = ["async-proto", "reqwest", "serde", "serde_json"]

[target.'cfg(unix)'.dependencies]
xdg = "2"

[target.'cfg(windows)'.dependencies]
directories = "5"
